# pyroxide

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
design/: 001-pointer-representation.md  002-struct-layout.md  003-slice-handles.md  004-string-passing.md  005-multiple-returns.md  006-panic-safety.md  007-error-handling.md  008-tensor-types.md  009-conversion-traits.md  010-no-safe-wrappers.md  011-removed-abstractions.md  012-build-system.md  013-opinionless.md  014-macro-asymmetry.md  015-mojoref-removal.md  016-handle-thread-safety.md  017-descriptor-guard.md  018-thread-safety-empirics.md  019-arc-tensor-deferred.md  README.md
embers/: Cargo.toml
embers/src/: bridge.rs  lib.rs  trampoline.rs
embers/src/types/: max.rs  primitives.rs
examples/: Cargo.toml  build.rs
examples/examples/: 01_hello.rs  02_structs.rs  03_tensors.rs  04_simd.rs  05_dtype_generic.rs  06_comptime.rs  07_embeddings.rs  08_abi_edge_cases.rs  09_image_blur.rs  10_tokenizer.rs  11_neural_layer.rs  12_accumulator.rs  13_sorting.rs  14_mandelbrot.rs  15_nested_structs.rs  16_struct_arrays.rs  17_mixed_args.rs  18_padding.rs  19_bytes.rs  20_call_overhead.rs  21_edge_cases.rs  22_large_data.rs  23_chained.rs  24_matrix.rs  25_catch_panic.rs  26_pipeline.rs  27_scalar_types.rs  28_aliasing.rs  29_concurrent.rs  30_null_ptr.rs  31_conditional_outparam.rs
examples/mojo/: abi_edge_cases.mojo  accumulator.mojo  aliasing.mojo  bytes.mojo  call_overhead.mojo  catch_panic.mojo  chained.mojo  comptime.mojo  concurrent.mojo  conditional_outparam.mojo  dtype_generic.mojo  edge_cases.mojo  embeddings.mojo  hello.mojo  image_blur.mojo  large_data.mojo  mandelbrot.mojo  matrix.mojo  mixed_args.mojo  nested_structs.mojo  neural_layer.mojo  null_ptr.mojo  padding.mojo  pipeline.mojo  scalar_types.mojo  simd.mojo  sorting.mojo  struct_arrays.mojo  structs.mojo  tensors.mojo  tokenizer.mojo
max-sys/: Cargo.toml  build.rs  wrapper.h
max-sys/headers/max/c/: context.h  model.h  symbol_export.h  tensor.h  weights.h
max-sys/src/: lib.rs
pyroxide/: Cargo.toml
pyroxide/src/: abi.rs  bridge.rs  lib.rs  string.rs  trampoline.rs
pyroxide/src/types/: max.rs  mod.rs  primitives.rs
scripts/: check-docs.sh  check-stale-refs.sh  fetch-headers.sh  generate-changelog.sh  install-hooks.sh  pre-commit
