[workspace]
members = ["pyroxide", "max-sys", "examples"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/honeyspoon/pyroxide"
authors = ["honeyspoon"]

[workspace.lints.clippy]
# Deny unwrap — use expect() with a reason, or proper error handling
unwrap_used = "deny"
# Every #[allow] must have a reason
allow_attributes_without_reason = "deny"
# Pedantic lints we want
pedantic = { level = "warn", priority = -1 }
# ... but not these pedantic ones
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"

[workspace.lints.rust]
# Unsafe blocks must document their safety invariants
unsafe_op_in_unsafe_fn = "deny"
