[package]
name = "pyroxide-examples"
description = "Guided examples for the pyroxide Rust-Mojo bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"
publish = false

[dependencies]
pyroxide = { path = "../pyroxide", features = ["max"] }
zerocopy = { version = "0.8", features = ["derive"] }
hf-hub = "0.4"
safetensors = "0.5"

[[example]]
name = "01_hello"
[[example]]
name = "02_structs"
[[example]]
name = "03_tensors"
[[example]]
name = "04_simd"
[[example]]
name = "05_dtype_generic"
[[example]]
name = "06_comptime"
[[example]]
name = "07_embeddings"
[[example]]
name = "08_abi_edge_cases"
[[example]]
name = "09_image_blur"
[[example]]
name = "10_tokenizer"
[[example]]
name = "11_neural_layer"
[[example]]
name = "12_accumulator"

# Examples: same base as workspace but relaxed for teaching code
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
unimplemented = "deny"
# Relaxed for examples
expect_used = { level = "allow", priority = 1 }
undocumented_unsafe_blocks = { level = "allow", priority = 1 }
# Same opt-outs as workspace
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
float_cmp = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
unreadable_literal = { level = "allow", priority = 1 }
cast_ptr_alignment = { level = "allow", priority = 1 }
derive_partial_eq_without_eq = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }
redundant_pub_crate = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
print_stderr = { level = "allow", priority = 1 }
semicolon_outside_block = { level = "allow", priority = 1 }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
