[package]
name = "pyroxide-examples"
description = "Guided examples for the pyroxide Rust-Mojo bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"
publish = false

[dependencies]
pyroxide = { path = "../pyroxide", features = ["max"] }
zerocopy = { version = "0.8", features = ["derive"] }  # needed for mojo_type! macro
hf-hub = "0.4"
safetensors = "0.5"

[package.metadata.cargo-machete]
ignored = ["zerocopy"]  # needed at compile time for mojo_type! derive macros

[[example]]
name = "01_hello"
[[example]]
name = "02_structs"
[[example]]
name = "03_tensors"
[[example]]
name = "04_simd"
[[example]]
name = "05_dtype_generic"
[[example]]
name = "06_comptime"
[[example]]
name = "07_embeddings"
[[example]]
name = "08_abi_edge_cases"
[[example]]
name = "09_image_blur"
[[example]]
name = "10_tokenizer"
[[example]]
name = "11_neural_layer"
[[example]]
name = "12_accumulator"
[[example]]
name = "13_sorting"
[[example]]
name = "14_mandelbrot"
[[example]]
name = "15_nested_structs"
[[example]]
name = "16_struct_arrays"
[[example]]
name = "17_mixed_args"
[[example]]
name = "18_padding"
[[example]]
name = "19_bytes"
[[example]]
name = "20_call_overhead"
[[example]]
name = "21_edge_cases"

# Examples: same base as workspace but relaxed for teaching code
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
unimplemented = "deny"
# Relaxed for examples
expect_used = { level = "allow", priority = 1 }
undocumented_unsafe_blocks = { level = "allow", priority = 1 }
# Same opt-outs as workspace
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
float_cmp = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
unreadable_literal = { level = "allow", priority = 1 }
cast_ptr_alignment = { level = "allow", priority = 1 }
derive_partial_eq_without_eq = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }
redundant_pub_crate = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
print_stderr = { level = "allow", priority = 1 }
semicolon_outside_block = { level = "allow", priority = 1 }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
